<resources>
    <string name="app_name">Yandex Fotki (Muzei Source)</string>
    <string name="source_name">Yandex Fotki</string>
    <string name="source_description">Russian Photos from Yandex Fotki</string>

    <string name="dataSource">Data Source</string>
    <string name="sourceType">Source Type</string>
    <string name="otherSettings">Other Settings</string>
    <string name="refreshInterval">Refresh Interval</string>
    <string name="updateOnWifiOnly">Update over Wi-Fi only</string>

    <string name="everyHour">Every hour</string>
    <string name="everyThreeHours">Every 3 hours</string>
    <string name="everySixHours">Every 6 hours</string>
    <string name="everyNineHours">Every 9 hours</string>
    <string name="everyTwelveHours">Every 12 hours</string>
    <string name="everyDay">Every day</string>

    <!-- Data sources -->
    <string name="pod">Photo of the Day</string>
    <string name="popular">Popular</string>
    <string name="action_share_artwork">Share photo</string>
    <string name="yandexfotki_source_error_no_artwork_to_share">No artwork to share.</string>
    <string name="rate_extension">Rate Extension</string>

</resources>
